ref #59725 @3h: moved endpoint into filterChain and add some unit-test