@@ -1,7 +1,14 @@
 package com.gpse.sesam.domain;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
-import jakarta.persistence.*;
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.OneToMany;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.AuthorityUtils;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -9,7 +16,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 import java.io.Serial;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Entity
 public class SesamUser implements UserDetails {
@@ -40,33 +46,33 @@ public class SesamUser implements UserDetails {
 	protected SesamUser() {
 	}
 
-    /**
-     * Creates a new {@link SesamUser}
-     *
-     * @param email the user's email
-     * @param password the user's password
-     * @param firstName the user's first name
-     * @param lastName the user's last name
-     * @param roles the user's roles
-     */
-    public SesamUser(String email, String password, String firstName, String lastName, List<SesamUserRole> roles) {
-        this.email = email;
-        this.password = password;
-        this.firstName = firstName;
-        this.lastName = lastName;
-        this.roles = roles;
-    }
+	/**
+	 * Creates a new {@link SesamUser}
+	 *
+	 * @param email     the user's email
+	 * @param password  the user's password
+	 * @param firstName the user's first name
+	 * @param lastName  the user's last name
+	 * @param roles     the user's roles
+	 */
+	public SesamUser(String email, String password, String firstName, String lastName, List<SesamUserRole> roles) {
+		this.email = email;
+		this.password = password;
+		this.firstName = firstName;
+		this.lastName = lastName;
+		this.roles = roles;
+	}
 
-    @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-        return AuthorityUtils.createAuthorityList(
-                roles.stream()
-                        .filter(SesamUserRole::isGranted)
-                        .map(e -> e.getRole().toString())
-                        .collect(Collectors.toList())
-                        .toArray(new String[0])
-        );
-    }
+	@Override
+	public Collection<? extends GrantedAuthority> getAuthorities() {
+		return AuthorityUtils.createAuthorityList(
+				roles.stream()
+						.filter(SesamUserRole::isGranted)
+						.map(e -> e.getRole().toString())
+						.toList()
+						.toArray(new String[0])
+		);
+	}
 
 	@Override
 	public String getUsername() {
@@ -125,12 +131,12 @@ public class SesamUser implements UserDetails {
 		return true;
 	}
 
-    @Override
-    public boolean isEnabled() {
-        return true;
-    }
+	@Override
+	public boolean isEnabled() {
+		return true;
+	}
 
-    public Long getId() {
-        return id;
-    }
+	public Long getId() {
+		return id;
+	}
 }
